--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
@@ -20,6 +24,7 @@
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-responsive-masonry": "^2.7.1",
     "react-router": "^7.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
